--- a/Torronto_web.ipynb
+++ b/Torronto_web.ipynb
@@ -2216,6 +2216,183 @@
     "        \n",
     "toronto_df_grouped.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M5G</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Central Bay Street</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M2H</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Hillcrest Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M4B</td>\n",
+       "      <td>East York</td>\n",
+       "      <td>Woodbine Gardens, Parkview Hill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1J</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Scarborough Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M4G</td>\n",
+       "      <td>East York</td>\n",
+       "      <td>Leaside</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M4M</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Studio District</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M1R</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Maryvale, Wexford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>M9V</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Albion Gardens, Beaumond Heights, Humbergate, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>M9L</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Humber Summit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>M5V</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>CN Tower, Bathurst Quay, Island airport, Harbo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Harbourfront, Regent Park</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PostalCode           Borough  \\\n",
+       "0         M5G  Downtown Toronto   \n",
+       "1         M2H        North York   \n",
+       "2         M4B         East York   \n",
+       "3         M1J       Scarborough   \n",
+       "4         M4G         East York   \n",
+       "5         M4M      East Toronto   \n",
+       "6         M1R       Scarborough   \n",
+       "7         M9V         Etobicoke   \n",
+       "8         M9L        North York   \n",
+       "9         M5V  Downtown Toronto   \n",
+       "10        M1B       Scarborough   \n",
+       "11        M5A  Downtown Toronto   \n",
+       "\n",
+       "                                         Neighborhood  \n",
+       "0                                  Central Bay Street  \n",
+       "1                                   Hillcrest Village  \n",
+       "2                     Woodbine Gardens, Parkview Hill  \n",
+       "3                                 Scarborough Village  \n",
+       "4                                             Leaside  \n",
+       "5                                     Studio District  \n",
+       "6                                   Maryvale, Wexford  \n",
+       "7   Albion Gardens, Beaumond Heights, Humbergate, ...  \n",
+       "8                                       Humber Summit  \n",
+       "9   CN Tower, Bathurst Quay, Island airport, Harbo...  \n",
+       "10                                     Rouge, Malvern  \n",
+       "11                          Harbourfront, Regent Park  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a new test dataframe\n",
+    "column_names = [\"PostalCode\", \"Borough\", \"Neighborhood\"]\n",
+    "test_df = pd.DataFrame(columns=column_names)\n",
+    "\n",
+    "test_list = [\"M5G\", \"M2H\", \"M4B\", \"M1J\", \"M4G\", \"M4M\", \"M1R\", \"M9V\", \"M9L\", \"M5V\", \"M1B\", \"M5A\"]\n",
+    "\n",
+    "for postcode in test_list:\n",
+    "    test_df = test_df.append(toronto_df_grouped[toronto_df_grouped[\"PostalCode\"]==postcode], ignore_index=True)\n",
+    "    \n",
+    "test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print the number of rows of the cleaned dataframe\n",
+    "toronto_df_grouped.shape"
+   ]
   }
  ],
  "metadata": {
