--- a/Torronto_web-3.ipynb
+++ b/Torronto_web-3.ipynb
@@ -3217,7 +3217,7 @@
    ],
    "source": [
     "# define Foursquare Credentials and Version\n",
-    "CLIENT_ID = 'V4HK3Z2T3T1445O5ZBMJYA0CGWA4MLDNQSY03A2MWDUGZ2G3' # your Foursquare ID\n",
+    "CLIENT_ID = 'remove' # your Foursquare ID\n",
     "CLIENT_SECRET = '1SUC44AH5JNEADAIYG4I3IDX523VPASCUH5TT2KFD2ZE1U40' # your Foursquare Secret\n",
     "\n",
     "print('Your credentails:')\n",
