--- a/Final_Project_Capstone.ipynb
+++ b/Final_Project_Capstone.ipynb
@@ -636,8 +636,8 @@
    ],
    "source": [
     "# define Foursquare Credentials and Version\n",
-    "CLIENT_ID = 'V4HK3Z2T3T1445O5ZBMJYA0CGWA4MLDNQSY03A2MWDUGZ2G3' # your Foursquare ID\n",
-    "CLIENT_SECRET = '1SUC44AH5JNEADAIYG4I3IDX523VPASCUH5TT2KFD2ZE1U40' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "print('Your credentails:')\n",
     "print('CLIENT_ID: ' + CLIENT_ID)\n",
